--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style2.css">
     <link rel="stylesheet" href="css/style3.css">
     <link rel="stylesheet" href="css/style4.css">
-    <link rel="stylesheet" href="css/style5.css">
+    <link rel="stylesheet" href="css/STYLE5.CSS">
     <link rel="stylesheet" href="css/style6.css">
     <title>BOTA FÉ</title>
 </head>
