--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/style4.css">
     <link rel="stylesheet" href="css/STYLE5.CSS">
     <link rel="stylesheet" href="css/style6.css">
+
+    <link rel="shortcut icon" href="img/logo.png" type="image/x-icon">
     <title>BOTA FÉ</title>
 </head>
 <body>
